<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="5dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_light"
        />

    <TextView
        android:id="@+id/txt_statement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="5"
        android:text="@string/txt_user_stat"
        android:textSize="10pt"
        android:background="@drawable/rounded_corner"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="7dp"
        android:paddingVertical="5dp"
        android:layout_marginHorizontal="10dp"
        android:elevation="10dp"
        />

    <TextView
        android:id="@+id/txt_verified_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_user_verified"
        android:textSize="7pt"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:textColor="@android:color/holo_blue_dark"
        />

    <TextView
        android:id="@+id/txt_trusted_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_trusted_by"
        android:textSize="7pt"
        android:textStyle="bold"
        android:layout_marginHorizontal="10dp"
        android:textColor="@android:color/holo_green_dark"
        />

    <TextView
        android:id="@+id/txt_not_trusted_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/txt_not_trusted_by"
        android:textSize="7pt"
        android:textStyle="bold"
        android:textColor="@android:color/holo_red_dark"
        />

    <LinearLayout
        android:id="@+id/form_opinion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="3"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/white"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:elevation="10dp"
            android:maxLength="50"
            android:hint="@string/txt_comment_hint"
            android:paddingVertical="5dp"
            android:paddingHorizontal="7dp"
            android:textCursorDrawable="@drawable/color_cursor"
            android:gravity="top|start"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_user_comment_q"
                android:textSize="20sp"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_not_trust"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@android:color/holo_red_light"
                android:drawableStart="@drawable/ic_down"
                android:paddingHorizontal="5dp"
                android:layout_marginHorizontal="10dp"
                android:text="@string/txt_not_trust"
                >

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_trust"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:drawableEnd="@drawable/ic_up"
                android:paddingHorizontal="5dp"
                android:text="@string/txt_trust"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_gravity="end"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_owner_option"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_delete"
                android:textAllCaps="false"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@color/black"
                android:textColor="@android:color/holo_red_light"
                android:drawableStart="@drawable/ic_delete"
                android:drawableTint="@android:color/holo_red_light"
                android:paddingHorizontal="5dp"
                android:layout_marginTop="7dp"
                />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/txt_stat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_already_choose"
        android:textAlignment="center"
        android:paddingHorizontal="7dp"
        android:paddingVertical="5dp"
        android:background="@drawable/rounded_corner"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:visibility="gone"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/txt_cancel"
        android:visibility="gone"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_comments"
            android:paddingHorizontal="10dp"
            />

        <LinearLayout
            android:id="@+id/col_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="10dp"
            android:visibility="visible"
            >

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="#5555"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/desc_profile_photo"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="7dp"
                    android:paddingVertical="5dp"
                    android:text="@string/txt_user_name"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corner"
                    android:paddingHorizontal="7dp"
                    android:paddingVertical="5dp"
                    android:text="@string/txt_user_comment"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="7dp"
                    android:paddingVertical="5dp"
                    android:text="@string/txt_user_opinion"
                    />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/no_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_no_comments"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:visibility="invisible"
            />

    </LinearLayout>

</LinearLayout>