<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/txt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_login_to"
        android:textSize="22sp"
        android:textStyle="bold"
        android:fontFamily="monospace"
        app:layout_constraintBottom_toTopOf="@id/title_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        />

    <TextView
        android:id="@+id/title_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="42sp"
        android:textColor="@android:color/holo_blue_light"
        android:textStyle="bold"
        android:fontFamily="monospace"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16sp"
        android:paddingVertical="7dp"
        android:text="@string/lbl_btn_login"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:drawableStart="@drawable/google_logo"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/title_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_or"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/btn_signin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_create"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_corner"
        app:layout_constraintTop_toBottomOf="@id/or"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/txt_create"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:backgroundTint="#33B5E5"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        />

</androidx.constraintlayout.widget.ConstraintLayout>