<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".frag_beranda">

    <!-- TODO: Update blank fragment layout -->

    <RadioGroup
        android:id="@+id/rg_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="10dp"
        android:paddingVertical="10dp"
        android:elevation="12dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@android:color/holo_blue_light"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rb_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:text="@string/txt_verified"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rb_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:text="@string/txt_not_verified"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginHorizontal="20dp"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rb_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:text="@string/txt_my_posts"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/tab_verified"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="10dp"
        android:orientation="vertical"
        android:paddingVertical="15dp">

        <LinearLayout
            android:id="@+id/list_verified"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tab_not_verified"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        android:paddingVertical="15dp"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/list_not_verified"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tab_my_posts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        android:paddingVertical="15dp"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/list_my_posts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            />

    </LinearLayout>

</LinearLayout>
